f: GC & heap-dumping flags for #4342